// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-date Renders with all props provided 1`] = `
<form-control-date exportparts="label,input,input-invalid">
  <label class="form-label" htmlfor="birthday" part="label">
    Birthday
  </label>
  <input class="form-control is-invalid" disabled="" id="birthday" name="birthday" part="input input-invalid" type="date" value="1990-01-01">
  <small class="form-text text-muted" id="form-help-text-birthday" part="input-help-text">
    Enter your birthday
  </small>
  <small class="form-text text-danger" id="form-error-text-birthday" part="input-error-text">
    Invalid date
  </small>
</form-control-date>
`;

exports[`form-control-date Renders with default props 1`] = `
<form-control-date exportparts="label,input,input-invalid">
  <label class="form-label" htmlfor="birthday" part="label">
    Birthday
  </label>
  <input class="form-control" id="birthday" name="birthday" part="input " type="date" value="undefined">
</form-control-date>
`;
